<resources>
    <string name="app_name">Serializer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_facebook_button">Login with facebook</string>

    <!-- Search show strings -->
    <string name="search_for_show_label">Search for shows</string>
    <string name="show_name">Name</string>
    <string name="show_genre">Genre</string>
    <string name="show_country">Country</string>
    <string name="search_button_text">Search</string>


    <!-- Show details -->
    <string name="description">Description</string>
    <string name="cast">Cast</string>
    <string name="next_episode">Next episode</string>
    <string name="login_google_button">Login with google+</string>
    <string name="my_shows">My shows</string>
    <string name="search_shows">Search shows</string>
    <string name="my_calendar">My calendar</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="no_episodes_in_future">"No episodes in near future."</string>

    <string name="facebook_app_id">1319105388208363</string>
    <string name="fb_login_protocol_scheme">fb1319105388208363</string>
    <string name="login_failed">Login failed. Please try again.</string>
    <string name="connection_failed">Login failed. Check your internet connection and try again.</string>
    <string name="title_activity_show_details">ShowDetails</string>
    <string name="transition_name">extra_image</string>
    <string name="share_using">Share using</string>

    <string name="no_shows">No shows found.</string>

    <string name="notifications">Notifications</string>
    <string name="save_button">Save</string>
    <string name="notifications_time">Time before notification</string>
    <string name="time_min">min</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
