<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/button_default_margin"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notifications"
            android:gravity="center"/>

        <ToggleButton
            android:layout_width="@dimen/toggle_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/notitications_toggle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/button_default_margin"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notifications_time"
            android:gravity="center"/>

        <EditText
            android:layout_width="@dimen/notification_label_width"
            android:layout_height="match_parent"
            android:id="@+id/notification_time"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/time_min"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_default_margin"
        android:layout_gravity="center"
        android:text="@string/save_button"
        android:id="@+id/settings_save"/>
</LinearLayout>