<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="serializerteam.serializer.ShowDetailsActivity"
    tools:showIn="@layout/activity_show_details">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_label"
                    style="@style/CardTitleStyle"
                    android:text="@string/description"/>

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_long_description"
                        style="@style/CardTextStyle"/>
                </android.support.v4.widget.NestedScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/next_episode_label"
                    style="@style/CardTitleStyle"
                    android:text="@string/next_episode" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/next_episode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:paddingLeft="@dimen/fab_margin"
                            android:paddingRight="@dimen/fab_margin"
                            android:paddingTop="@dimen/top_padding"
                            android:textSize="@dimen/list_item_secondary_text_font_size" />

                        <TextView
                            android:id="@+id/next_episode_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:paddingLeft="@dimen/fab_margin"
                            android:paddingRight="@dimen/fab_margin"
                            android:textSize="@dimen/list_item_secondary_text_font_size" />
                    </LinearLayout>

                    <android.support.v4.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/next_episode_description"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:paddingLeft="@dimen/fab_margin"
                            android:paddingRight="@dimen/fab_margin"
                            android:paddingTop="@dimen/top_padding"
                            android:textSize="@dimen/list_item_secondary_text_font_size"

                            />
                    </android.support.v4.widget.NestedScrollView>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/MyCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cast_label"
                    style="@style/CardTitleStyle"
                    android:text="@string/cast"
                    android:paddingBottom="@dimen/spacing_medium"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/show_cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/fab_margin"
                    android:paddingRight="@dimen/fab_margin"
                    android:paddingTop="@dimen/top_padding"></android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
